--- a/pch-branch/gcc/ChangeLog
+++ b/pch-branch/gcc/ChangeLog
@@ -1,5 +1,56 @@
 2002-02-18  Geoffrey Keating  <geoffk@redhat.com>
 
+	* function.h (free_lang_status): Mark as obsolete.
+	* function.c (free_lang_status): Mark as obsolete.
+	* c-decl.c (push_c_function_context): Use GC to allocate and free
+	struct language_function.
+	(pop_c_function_context): Likewise.
+	* c-common.c (mark_c_language_function): Mark struct
+	language_function.
+
+	* doc/tm.texi (Per-Function Data): Don't document free_machine_status.
+	Document that the machine_function structures must be allocated
+	using GC.  Update mark_machine_status documentation.
+	* function.h: Don't declare free_machine_status.
+	* function.c (free_machine_status): Don't define. 
+	(free_after_compilation): Don't call free_machine_status.
+	(ggc_mark_struct_function): Mark f->machine.  Call
+	mark_machine_status only on non-NULL pointers.
+	* system.h: Poison free_machine_status.
+	* config/xtensa/xtensa.c (xtensa_init_machine_status): Use GC on
+	struct machine_function.
+	(xtensa_free_machine_status): Delete.
+	(override_options): Don't set free_machine_status.
+	* config/rs6000/rs6000.c (rs6000_override_options): Don't set
+	free_machine_status.
+	(rs6000_init_machine_status): Use GC on struct machine_function.
+	(rs6000_free_machine_status): Delete.
+	* config/ia64/ia64.c (ia64_init_machine_status): Use GC on struct
+	machine_function.
+	(ia64_mark_machine_status): Likewise.
+	(ia64_free_machine_status): Delete.
+	(ia64_override_options): Don't set free_machine_status.
+	* config/i386/i386.c (override_options): Don't set
+	free_machine_status.
+	(ix86_init_machine_status): Use GC on struct machine_function.
+	(ix86_mark_machine_status): Likewise.
+	(ix86_free_machine_status): Delete.
+	* config/d30v/d30v.c: (d30v_init_machine_status): Use GC on struct
+	machine_function.
+	(d30v_mark_machine_status): Likewise.
+	(d30v_free_machine_status): Delete.
+	(d30v_init_expanders): Don't set free_machine_status.
+	* config/arm/arm.c (arm_mark_machine_status): Use GC on struct
+	machine_function.
+	(arm_init_machine_status): Likewise.
+	(arm_free_machine_status): Delete.
+	(arm_init_expanders): Don't set free_machine_status.
+	* config/alpha/alpha.c (override_options): Don't set
+	free_machine_status.
+	(alpha_init_machine_status): Use GC on struct machine_function.
+	(alpha_mark_machine_status): Likewise.
+	(alpha_free_machine_status): Delete.
+
 	* varasm.c (compare_constant): Fix typo.
 
 	* varasm.c: Don't include obstack.h.
