--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 19 12:37:23 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* regmove.c (regmove_optimize): Avoid increasing of register pressure.
+
 2002-02-19  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	PR other/5718
