* doc/rtl.texi (Flags, MEM_SCALAR_P): Fix typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49867 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-19  Gaute B Strokkenes <gs234@cam.ac.uk>
+
+	* doc/rtl.texi (Flags, MEM_SCALAR_P): Fix typo.
+
 2002-02-19  Ryan T. Sammartino <ryants@shaw.ca>
 
 	* doc/invoke.texi: explicitly list the style guidelines that
