* config/xtensa/xm-xtensa.h:  Add missing SUCCESS_EXIT_CODE         and FATAL_EXIT_CODE; remove HAVE_VPRINTF and HAVE_PUTENV.         * config/xtensa/lib1funcs.asm: Fix copyright to include         special case for libgcc files.         * config/xtensa/lib2funcs.S: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-14  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xm-xtensa.h:  Add missing SUCCESS_EXIT_CODE
+	and FATAL_EXIT_CODE; remove HAVE_VPRINTF and HAVE_PUTENV.
+	* config/xtensa/lib1funcs.asm: Fix copyright to include
+	special case for libgcc files.
+	* config/xtensa/lib2funcs.S: Likewise.
+
 2002-02-14  Janis Johnson  <janis187@us.ibm.com>
 
 	* config.gcc (i*86-sequent-sysv4): Fix setting of tm_file.
