2002-02-19  Robert Lipe  <robertlipe@usa.net>
        * config/i386/t-sco5gas: (CRTSTUFF_T_CFLAGS_S): Delete -mcoff.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49869 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-19  Robert Lipe  <robertlipe@usa.net>
+
+	* config/i386/t-sco5gas: (CRTSTUFF_T_CFLAGS_S): Delete -mcoff.
+
 2002-02-14  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xm-xtensa.h:  Add missing SUCCESS_EXIT_CODE
