--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-19  Gaute B Strokkenes <gs234@cam.ac.uk>
+
+	* doc/c-tree.texi (Classes, TYPE_BINFO): Fix typo.
+
 2002-02-19  Philip Blundell  <pb@nexus.co.uk>
 
 	PR 5399
