* tree.h (struct tree_common): Remove aux.  Add unused_0 at 	end of first block of bitfields (which was only seven bits); 	rename dummy to unused_1; remove comment which is no longer true.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49883 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-19  Zack Weinberg  <zack@codesourcery.com>
+
+	* tree.h (struct tree_common): Remove aux.  Add unused_0 at
+	end of first block of bitfields (which was only seven bits);
+	rename dummy to unused_1; remove comment which is no longer true.
+
 2002-02-19  Gaute B Strokkenes <gs234@cam.ac.uk>
 
 	* doc/c-tree.texi (Classes, TYPE_BINFO): Fix typo.
