ABI change: Mangle `void (A::*)() const' as 	M1AKFvvE, not MK1AFvvE. 	* mangle.c (write_function_type): Write cv-quals for member 	function type here. 	(write_pointer_to_member_type): Not here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49887 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-19  Jason Merrill  <jason@redhat.com>
+
+	ABI change: Mangle `void (A::*)() const' as 
+	M1AKFvvE, not MK1AFvvE.
+	* mangle.c (write_function_type): Write cv-quals for member
+	function type here.
+	(write_pointer_to_member_type): Not here.
+
 2002-02-18  Jason Merrill  <jason@redhat.com>
 
 	* pt.c (do_type_instantiation): Don't pedwarn if in_system_header.
