* toplev.c (output_quoted_string): Write unprintable 	characters with octal escapes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49891 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-19  Zack Weinberg  <zack@codesourcery.com>
+
+	* toplev.c (output_quoted_string): Write unprintable
+	characters with octal escapes.
+
 2002-02-19  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.h (CONDITIONAL_REGISTER_USAGE): Set
