--- a/gcc/doc/cpp.texi
+++ b/gcc/doc/cpp.texi
@@ -3956,6 +3956,8 @@ suffix replaced with object file suffix.  If there are many included
 files then the rule is split into several lines using @samp{\}-newline.
 The rule has no commands.
 
+Passing @option{-M} to the driver implies @option{-E}.
+
 @item -MM
 Like @option{-M}, but mention only the files included with @code{@w{#include
 "@var{file}"}} or with @option{-include} or @option{-imacros} command line
@@ -3963,10 +3965,14 @@ options.  System header files included with @code{@w{#include <@var{file}>}}
 are omitted.
 
 @item -MF @var{file}
-When used with @option{-M} or @option{-MM}, specifies a file to write the
-dependencies to.  This allows the preprocessor to write the preprocessed
-file to stdout normally.  If no @option{-MF} switch is given, CPP sends
-the rules to stdout and suppresses normal preprocessed output.
+@anchor{-MF}
+When used with @option{-M} or @option{-MM}, specifies a
+file to write the dependencies to.  If no @option{-MF} switch is given
+the preprocessor sends the rules to the same place it would have sent
+preprocessed output.
+
+When used with the driver options @option{-MD} or @option{-MMD},
+@option{-MF} overrides the default dependency output file.
 
 @item -MG
 When used with @option{-M} or @option{-MM}, @option{-MG} says to treat missing
@@ -4019,14 +4025,24 @@ $$(objpfx)foo.o: foo.c
 The default target is automatically quoted, as if it were given with
 @option{-MQ}.
 
-@item -MD @var{file}
-@itemx -MMD @var{file}
-@option{-MD @var{file}} is equivalent to @option{-M -MF @var{file}}, and
-@option{-MMD @var{file}} is equivalent to @option{-MM -MF @var{file}}.
+@item -MD
+@option{-MD} is equivalent to @option{-M -MF @var{file}}, except that
+@option{-E} is not implied.  The driver determines @var{file} based on
+whether an @option{-o} option is given.  If it is, the driver uses its
+argument but with a suffix of @file{.d}, otherwise it take the
+basename of the input file and applies a @file{.d} suffix.
 
-Due to limitations in the compiler driver, you must use these switches
-when you want to generate a dependency file as a side-effect of normal
-compilation.
+If @option{-MD} is used in conjunction with @option{-E}, any
+@option{-o} switch is understood to specify the dependency output file
+(but @pxref{-MF}), but if used without @option{-E}, each @option{-o}
+is understood to specify a target object file.
+
+Since @option{-E} is not implied, @option{-MD} can be used to generate
+a dependency output file as a side-effect of the compilation process.
+
+@item -MMD
+Like @option{-MD} except mention only user header files, not system
+-header files.
 
 @item -x c
 @itemx -x c++
