--- a/gcc-3_0-branch/contrib/ChangeLog
+++ b/gcc-3_0-branch/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Release Manager
+
+	* GCC 3.0.4 Released.
+
 2002-02-03  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* PR3145.patch: Update.
