--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Release Manager
+
+	* GCC 3.0.4 Released.
+
 2002-02-19  Eric Christopher  <echristo@redhat.com>
 
 	PR 5405 Backport march/mtune patches for compatibility with
