--- a/gcc-3_0-branch/gcc/f/ChangeLog
+++ b/gcc-3_0-branch/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Release Manager
+
+	* GCC 3.0.4 Released.
+
 2002-02-02  Richard Henderson  <rth@redhat.com>
 
 	* ste.c (ffeste_begin_iterdo_): Use expand_exit_loop_top_cond.
