--- a/gcc-3_0-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_0-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Release Manager
+
+	* GCC 3.0.4 Released.
+
 2002-02-13  Richard Smith <richard@ex-parrot.com>
 
 	* g++.old-deja/g++.other/thunk1.C: New test.
