--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-02-20	Joel Sherrill <joel@OARcorp.com>
+
+	* config/a29k/rtems.h, config/arm/rtems-elf.h, config/h8300/rtems.h,
+	config/mips/rtems.h: Use new style of -Asystem= rather than -Asystem().
+	Also done for -Acpu and -Amachine.
+
 2002-02-20  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cppinit.c (init_dependency_output): Take deps output file
