* expmed.c (store_bit_field): Do not store bit fields using SUBREG 	operations if the field does not start at a mode boundary.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49899 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-20  Diego Novillo  <dnovillo@redhat.com>
+
+	* expmed.c (store_bit_field): Do not store bit fields using SUBREG
+	operations if the field does not start at a mode boundary.
+
 2001-02-20	Joel Sherrill <joel@OARcorp.com>
 
 	* config/a29k/rtems.h, config/arm/rtems-elf.h, config/h8300/rtems.h,
